Travail sur meta index

--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!doctype html>
-<html lang="Default">
+<html lang="FR">
 <head>
     <meta charset="utf-8">
-    <meta name="keywords" content="seo, google, site web, site internet, agence design paris, agence design, agence design,agence design,agence design,agence design,agence design,agence design,agence design,agence design">
-    <meta name="description" content="">
+    <meta name="keywords" content="seo, site web, agence design lyon, référencement, UX design, interface utilisateur">
+    <meta name="description" content="Fondée en 2011, l'agence La Panthère est l'agence lyonnaise n°1 dans le webdesign. Besoin d'un site web performant adapté à vos besoins ? Notre équipe d'experts s'en charge pour vous.">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
     <link rel="shortcut icon" type="image/png" href="favicon.jpg">
     
@@ -19,7 +19,7 @@
 	<script src="./js/jquery.touchSwipe.js" defer></script>
 	<script src="./js/gmaps.js"></script>
 
-    <title>.</title>
+    <title>La Panthère | Agence Webdesign à Lyon</title>
 
     
 <!-- Analytics -->
