--- a/page2.html
+++ b/page2.html
@@ -28,7 +28,7 @@
 </head>
 <body>
 <!-- Principal conteneur -->
-<div class="page-container">
+<main class="page-container">
     
 <!-- bloc-0 -->
 <div class="bloc bgc-white l-bloc " id="bloc-0">
@@ -160,7 +160,7 @@
 </div>
 <!-- Footer - bloc-8 END -->
 
-</div>
+</main>
 <!-- Principal conteneur END -->
     
 
