--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 	<div class="container bloc-md">
 		<div class="row">
 			<div class="col-sm-12 text-center text_black">
-				L'agence la Panthère est une agence de web design qui aide les entreprises à devenir attractives et visibles sur internet.
+				<h2>L'agence la Panthère est une agence de web design qui aide les entreprises à devenir attractives et visibles sur internet.</h2>
 			</div>
 		</div>
 		<div class="row voffset-lg med-width-whitespace">
@@ -154,7 +154,7 @@
 	<div class="container bloc-lg">
 		<div class="row">
 			<div class="col-sm-12 text-center">
-				<p class="text_black">Nous travaillons avec beaucoup de clients, voici nos réalisations</p>
+				<h2 class="text_black">Nous travaillons avec beaucoup de clients, voici nos réalisations</h2>
 			</div>
 		</div>
 		<div class="row tight-width-whitespace portfolio-row">
