--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 <main class="page-container">
     
 <!-- bloc-0 -->
-<section class="bloc bgc-white l-bloc " id="bloc-0">
+<header class="bloc bgc-white l-bloc " id="bloc-0">
 	<div class="container bloc-sm">
 
 		<nav class="navbar row">
@@ -54,7 +54,7 @@
 			</div>
 		</nav>
 	</div>
-</section>
+</header>
 <!-- bloc-0 END -->
 
 <!-- bloc-1-presentation -->
@@ -64,7 +64,7 @@
 			<div class="col-sm-12">
 				<img src="img/logo.webp" class="center-block image-resize-mode" width="100" alt="Logo de l'agence La Panthère" />
 				<h1 class="text-center hero-bloc-text tc-white ">
-					Agence La Panthère
+					La Panthère, Agence de Web Design
 				</h1>
 				<div class="text-center">
 					<a href="page2.html" class="btn btn-lg btn-clean btn-rd cta-hero btn-atomic-tangerine" id="cta-hero">Contact</a>
@@ -80,7 +80,7 @@
 	<div class="container bloc-md">
 		<div class="row">
 			<div class="col-sm-12 text-center text_black">
-				<h2>L'agence la Panthère est une agence de web design qui aide les entreprises à devenir attractives et visibles sur internet.</h2>
+				<h2>L'agence la Panthère est une entreprise de web design qui aide les entreprises à devenir attractives et visibles sur internet.</h2>
 			</div>
 		</div>
 		<div class="row voffset-lg med-width-whitespace">
